Removed JDBC as unsafe implementation